Intent (2) UI 작업만

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,4 +14,14 @@
         android:layout_height="wrap_content"
         android:text="다른 화면으로 넘어가기" />
 
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="인사 문구를 적어주세요." />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="인사 문구를 다른 화면에 넘겨주기" />
+
 </LinearLayout>
