화면 이동 전에 입력문구 첨부까지.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,11 +15,13 @@
         android:text="다른 화면으로 넘어가기" />
 
     <EditText
+        android:id="@+id/messageEdt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="인사 문구를 적어주세요." />
 
     <Button
+        android:id="@+id/sendMessageBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="인사 문구를 다른 화면에 넘겨주기" />
