--- a/app/src/main/res/layout/activity_view_message.xml
+++ b/app/src/main/res/layout/activity_view_message.xml
@@ -10,6 +10,7 @@
     tools:context=".ViewMessageActivity">
 
     <TextView
+        android:id="@+id/messageTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="이전 화면에서 보내준 메세지가 나옵니다."
