--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,4 +26,10 @@
         android:layout_height="wrap_content"
         android:text="인사 문구를 다른 화면에 넘겨주기" />
 
+    <Button
+        android:id="@+id/sendContentBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="인사 문구를 컨텐츠화면에 넘기기" />
+
 </LinearLayout>
