--- a/app/src/main/res/layout/activity_edit_nickname.xml
+++ b/app/src/main/res/layout/activity_edit_nickname.xml
@@ -14,12 +14,14 @@
         android:text="새 닉네임" />
 
     <EditText
+        android:id="@+id/nicknameEdt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="새로 사용할 닉네임을 넣어주세요."
         android:singleLine="true"/>
 
     <Button
+        android:id="@+id/okBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="닉네임 변경 완료" />
